--- a/ServerIntegTests/ServerIntegTests.csproj
+++ b/ServerIntegTests/ServerIntegTests.csproj
@@ -62,7 +62,9 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
@@ -70,6 +72,9 @@
     <Compile Include="MockedResources.cs" />
     <Compile Include="ResourceTests\DeviceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceTests\PatientTests.cs" />
+    <Compile Include="ResourceTests\ObservationTests.cs" />
+    <Compile Include="ResourceTests\SecurityTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
